# alembic-pg-enum-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  test_simple_usage.py
.github/workflows/: ci.yml  release.yml
alembic_pg_enum_generator/: __init__.py  add_enum_value_op.py  compare_dispatch.py  config.py  connection.py  declared_enums.py  defined_enums.py  types.py
example/: env.py  example_migration.py  models.py
simple_enum_generator/: __init__.py  config.py  connection.py  declared_enums.py
tests/: test_add_enum_value_op.py  test_compare_dispatch.py  test_config.py  test_declared_enums.py  test_defined_enums.py  test_integration.py
